--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   height: 40vmin;
   pointer-events: none;
 }
+.log-out-button{
+  position: absolute;
+  right: 2px;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -15,14 +19,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #99b2e4;
+  border: 1px solid rgb(235, 237, 240);
 }
 
 .App-link {
